tests/ui/error-codes/E0431.rs
use {self}; //~ ERROR E0431

fn main () {
}
